# snapshot

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  compile  compile_ui  init  static.qrc
.github/workflows/: release.yml  tests.yml
app/: CMakeLists.txt  main.cpp
cmake/: Build.cmake  Constants.cmake  Find.cmake  FindFFmpeg_patched.cmake  Install.cmake  Version.cmake  find_static_library.cmake  toolchain.cmake
include/: snapshotapp.hpp  version.h.in
include/gui/: mainwindow.hpp  mainwindow.ui  videoscene.hpp
include/helpers/: argparse.hpp  charpointers.hpp  config.hpp  path.hpp  time.hpp
include/video/: connect.hpp  find.hpp  record.hpp
resources/: resources.qrc
scripts/: build-ffmpeg  build-libdrm  build-libva  build-qt  build-qt-shared  build-qt-static  build-vulkan  configure  cross-compile-rpi  install-ffmpeg-shared  install-qt  login-qt  run_snapshot  run_tests  setup  setup-debug-environment  setup-release-environment  setup-rpi  snapshot  snapshot.bash
scripts/helpers/: download-installer  download-qt  get-package-manager
scripts/helpers/apt/: assert  enable-kisak-mesa-repo  enable-kitware-repo  install-cross-compile-deps  install-ffmpeg-deps  install-ffmpeg-shared-deps  install-libdrm-deps  install-libva-deps  install-project-deps  install-rpi-deps  install-vulkan
scripts/helpers/pacman/: install-cross-compile-deps  install-ffmpeg-deps  install-ffmpeg-shared-deps  install-libdrm-deps  install-libva-deps  install-project-deps
scripts/install/: snapshot  snapshot_tests
src/: CMakeLists.txt  app.cpp  app.h  argparse.cpp  argparse.h  argparse.hpp  camera.cpp  camera.hpp  config.cpp  config.hpp  gtest.cmake  gui.hpp  list.cpp  list.hpp  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  snapshotapp.cpp  videoscene.cpp  videoscene.h  viewer.cpp  viewer.h
src/app/: CMakeLists.txt  app.cpp  app.hpp  snapshotapp.cpp
src/camera/: connect.cpp  connect.hpp  connector.cpp  connector.hpp  find.cpp  find.hpp  list.cpp  list.hpp
src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  videoscene.cpp  videoscene.hpp
src/helpers/: CMakeLists.txt  argparse.cpp  argv.cpp  argv.hpp  charpointers.cpp  config.cpp  config.hpp  cout_redirect.cpp  cout_redirect.hpp  coutredirect.cpp  logger.cpp  logger.hpp  path.cpp  path.hpp  time.cpp  time.hpp
src/resources/: resources.qrc
src/snapshot/: app.cpp  app.hpp  gui.cpp  gui.hpp
src/static/: config.json
src/video/: CMakeLists.txt  connect.cpp  connect.hpp  find.cpp  find.hpp  image_saver.cpp  image_saver.hpp  record.cpp  record.hpp  state.cpp  state.hpp
static/: config.ini  config.json
tests/: CMakeLists.txt  argparse_test.cpp  camera_test.cpp  config_test.cpp  find_test.cpp  helpers.cpp  list_test.cpp  main.cpp  viewer_test.cpp
tests/camera_test/: find_test.cpp
tests/helpers_test/: argparse_test.cpp  config_test.cpp  time_test.cpp
tests/static/: config_test.json  config_user_incomplete_test.json  config_user_test.ini  config_user_test.json
tests/test_app/: test_app.cpp
tests/test_helpers/: test_argparse.cpp  test_charpointers.cpp  test_config.cpp  test_path.cpp  test_time.cpp
tests/test_video/: test_connect.cpp  test_find.cpp  test_record.cpp
tests/video_test/: find_test.cpp
